# jura-connect-hass

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  flake.nix  hacs.json  info.md  pyproject.toml
.github/workflows/: ci.yml
custom_components/jura/: __init__.py  binary_sensor.py  button.py  cli.py  config_flow.py  const.py  coordinator.py  entity.py  i18n.py  manifest.json  number.py  select.py  sensor.py  serializers.py  services.yaml  strings.json
custom_components/jura/backends/: base.py  jura.py
custom_components/jura/brew/: __init__.py  definitions.py  prefs.py  products.py
custom_components/jura/translations/: de.json  en.json
nix/: vm-test.nix
tests/: conftest.py  test_availability.py  test_binary_sensor.py  test_brew_payload.py  test_brew_platform.py  test_brew_prefs.py  test_brew_service.py  test_button.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_serializers.py  test_services.py  test_settings_platforms.py  test_translations.py
tests/test_backends/: test_base.py  test_jura.py
